# kaggle-tps-mar-2022-odsc

./: .env.example  .gitignore  Dockerfile  Pipfile  README.md  pyproject.toml
notebooks/: odsc-2022-step-1-pycaret.ipynb  odsc-2022-step-2-pycaret+W_B.ipynb  odsc-2022-step-3-pycaret+W_B+Prefect.ipynb  train-end-to-end-model.ipynb
notebooks/reference/: tps-mar-2022-eda-model.ipynb  tps-mar-22-fe-lama-lightautoml.ipynb  tps-mar-22-step-0-data-exploration-animation.ipynb  tpsmar22-eda-which-makes-sense.ipynb
src/: 1_download_and_log_kaggle_data.py  log-kaggle-data.py  prefect_configs.py  register_e2e_flow.py  utils.py
src/flow_utilities/: __init__.py  prefect_configs.py
