[tool.poetry]
name = "kaggle-tps-mar-2022-odsc"
version = "0.1.0"
description = "Using PyCaret, W&B, and Prefect to show how to orchestrate reproducible AutoML experiments on the Tabular Playground Series - March 2022 on Kaggle"
authors = ["Anish Shah <anish@wandb.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
